env  sem id workspace
Retirado os Id dos Workspaces e  o name do arquivo manifest

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Environment variables
-WORKSPACE_ID=e7e91bc5-99f4-494c-8727-17c162ee5793
+WORKSPACE_ID=
 # You need to provide either username and password
 ASSISTANT_USERNAME=96d53b10-abc4-4ead-8765-b804cc82efaf
 ASSISTANT_PASSWORD=78yHSUAtIKAA
